<resources>
    <string name="app_name">Social Campers</string>
    <string name="action_settings">Settings</string>
    <!-- Required for Facebook to identify the app-->
    <string name="app_id">1569799286600648</string>
    <string name="click_continue">CLICK TO CONTINUE</string>
    <string name="hello">Hello!</string>
    <string name="fb_login"><b>Log in with Facebook</b></string>
    <string name="title_activity_park">List of parks in the app</string>
    <string name="title_activity_park_info">Park Information</string>
    <string name="about"><b>About</b></string>
    <string name="park_loc"><b>Location</b></string>
    <string name="best_time_visit"><b>Best time to visit</b></string>
    <string name="to_do"><b>Things to do</b></string>
    <string name="places_to_go"><b>Places to go</b></string>
    <string name="campgrounds_list"><b>List of Campgrounds in the park</b></string>
    <string name="title_activity_main">MainActivity</string>
    <string name="title_activity_campground_info">CampgroundInfoActivity</string>
    <string name="campground_info">Campground Information</string>
    <string name="campgrounds_list_button">CLICK TO VIEW LIST OF CAMPGROUNDS</string>
    <string name="title_activity_campground_list">campground_list</string>
    <string name="title_activity_review_display">ReviewDisplayActivity</string>
    <string name="reviews_for">REVIEWS FOR</string>
    <string name="button_write_review">WRITE REVIEW</string>
    <string name="title_activity_write_review">WriteReviewActivity</string>
</resources>
