<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ParkInfoActivity">

    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="?attr/colorPrimary"
        app:popupTheme="@style/AppTheme.PopupOverlay">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/park_name_in_info"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:textAlignment="center"/>

    </android.support.v7.widget.Toolbar>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="center_horizontal|center"
        android:overScrollMode="always"
        android:scrollIndicators="right">

        <TextView
            android:layout_width="500dp"
            android:layout_height="50dp"
            android:id="@+id/textView1"
            android:scrollbars="vertical"
            android:gravity="top"
            android:layout_marginTop="58dp"
            android:layout_alignParentTop="false"
            android:layout_alignParentRight="true"
            android:layout_alignParentEnd="false"
            android:layout_marginBottom="5dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp" />

        <!--
        <ScrollView
            android:layout_width="200dp"
            android:layout_height="100dp"
            android:id="@+id/ScrollView1"
            android:layout_marginLeft="23dp"
            android:layout_marginStart="23dp"
            android:layout_above="@+id/textView2"
            android:layout_toRightOf="@+id/tv_best_time_visit"
            android:layout_toEndOf="@+id/tv_best_time_visit" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="tv1 about Text"
                android:id="@+id/textView1"/>

        </ScrollView>

        -->

        <TextView
            android:layout_width="90dp"
            android:layout_height="30dp"
            android:text="@string/park_loc"
            android:id="@+id/tv_park_loc"
            android:layout_alignTop="@+id/textView2"
            android:layout_marginLeft="10dp" />

        <TextView
            android:layout_width="220dp"
            android:layout_height="wrap_content"
            android:id="@+id/textView2"
            android:layout_below="@+id/textView1"
            android:layout_marginBottom="5dp"
            android:layout_marginLeft="150dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="30dp"
            android:text="@string/best_time_visit"
            android:id="@+id/tv_best_time_visit"
            android:layout_below="@+id/textView2"
            android:layout_alignLeft="@+id/tv_park_loc"
            android:layout_alignStart="@+id/tv_park_loc" />

        <TextView
            android:layout_width="220dp"
            android:layout_height="wrap_content"
            android:id="@+id/textView3"
            android:layout_below="@+id/textView2"
            android:layout_marginBottom="5dp"
            android:layout_alignLeft="@+id/textView2"
            android:layout_marginRight="5dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="30dp"
            android:text="@string/to_do"
            android:id="@+id/tv_to_do"
            android:layout_alignTop="@+id/textView4"
            android:layout_alignLeft="@+id/tv_best_time_visit"
            android:layout_alignStart="@+id/tv_best_time_visit"
            android:layout_marginTop="15dp" />

        <TextView
            android:layout_width="200dp"
            android:layout_height="60dp"
            android:id="@+id/textView4"
            android:scrollbars="vertical"
            android:layout_below="@+id/textView3"
            android:layout_alignRight="@+id/textView2"
            android:layout_alignEnd="@+id/textView2"
            android:layout_marginBottom="5dp"
            android:layout_alignLeft="@+id/textView2"
            android:layout_alignStart="@+id/textView2" />

        <!--

        <ScrollView
            android:layout_width="170dp"
            android:layout_height="70dp"
            android:id="@+id/ScrollView4"
            android:layout_above="@+id/ScrollView5"
            android:layout_alignLeft="@+id/ScrollView5"
            android:layout_alignStart="@+id/ScrollView5"
            android:layout_alignRight="@+id/ScrollView1"
            android:layout_alignEnd="@+id/ScrollView1">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="tv4 to_do Text"
                android:id="@+id/textView4"/>

        </ScrollView>

        -->

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="30dp"
            android:text="@string/places_to_go"
            android:id="@+id/tv_to_go"
            android:layout_below="@+id/textView4"
            android:layout_alignLeft="@+id/tv_to_do"
            android:layout_alignStart="@+id/tv_to_do"
            android:layout_alignRight="@+id/tv_best_time_visit"
            android:layout_alignEnd="@+id/tv_best_time_visit"
            android:layout_marginTop="15dp" />


        <TextView
            android:layout_width="180dp"
            android:layout_height="60dp"
            android:id="@+id/textView5"
            android:scrollbars="vertical"
            android:layout_below="@+id/textView4"
            android:layout_alignRight="@+id/textView4"
            android:layout_alignEnd="@+id/textView4"
            android:layout_marginBottom="5dp"
            android:layout_alignLeft="@+id/textView4"
            android:layout_alignStart="@+id/textView4" />

        <!--

        <ScrollView
            android:layout_width="170dp"
            android:layout_height="70dp"
            android:id="@+id/ScrollView5"
            android:layout_above="@+id/tv_campgrounds_list"
            android:layout_alignRight="@+id/ScrollView1"
            android:layout_alignEnd="@+id/ScrollView1"
            android:layout_alignLeft="@+id/textView3"
            android:layout_alignStart="@+id/textView3">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="tv1 placesToGo Text"
                android:id="@+id/textView5"/>

        </ScrollView>

        -->

        <!-- Text view and list view to list campgrounds-->
        <TextView
            android:layout_width="260dp"
            android:layout_height="wrap_content"
            android:text="@string/campgrounds_list"
            android:id="@+id/tv_campgrounds_list"
            android:layout_marginTop="5dp"
            android:layout_below="@+id/textView5"
            android:layout_centerHorizontal="true" />


        <ListView
            android:layout_width="wrap_content"
            android:layout_height="100dp"
            android:id="@+id/lv_campgrounds_list"
            android:layout_below="@+id/tv_campgrounds_list"
            android:layout_alignRight="@+id/textView5"
            android:layout_alignParentBottom="true"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:layout_marginLeft="15dp"
            style="@style/Base.TextAppearance.AppCompat.Button" />




    </RelativeLayout>

</android.support.design.widget.CoordinatorLayout>
